--- a/Report/final_report.tex
+++ b/Report/final_report.tex
@@ -262,7 +262,7 @@ Both the A* and DFS algorithms were used in the final design. The A* algorithm (
 
 \section{Conclusions}
 
-As part of this project an autonomous line following robot that can play a form of pacman was designed and developed. The robot was able to traverse the maze, following the lines and collect the required food pellets in the shortest time/distance. A simple analogue circuit was developed to process the light sensor readings into digital signals for feeding into the PSoC. This was built using SMD components on a PCB design that took advantage of the `rooms' feature in Altium Designer. An effective sensor layout was devised such that the robot can follow a line with minimal deviations and accurately detect intersections. A* and DFS path finding algorithms were both used to effectively to best meet the reqirements of each level. A PID contoller was used to ensure the motors of the robot were used to effectively. Through undertaking this project, the group members were able to significantly develop their professional engineering skills. In particular, the communications skills, both written and oral, of the group members were improved, as well as gaining more experience of working in a team to solve a problem. A methodology for both approaching a problem, and for budgeting time, effort and resources was also developed as part of this project.
+As part of this project an autonomous line following robot that can play a form of pacman was designed and developed. The robot was able to traverse the maze, following the lines and collect the required food pellets in the shortest time/distance. A simple analogue circuit was developed to process the light sensor readings into digital signals for feeding into the PSoC. This was built using SMD components on a PCB design that took advantage of the `rooms' feature in Altium Designer. An effective sensor layout was devised such that the robot can follow a line with minimal deviations and accurately detect intersections. A* and DFS path finding algorithms were both used to effectively to best meet the reqirements of each level. A PID contoller was used to ensure the motors of the robot were used to effectively. Through undertaking this project, the group members were able to significantly develop their professional engineering skills. In particular, communications skills, both written and oral, of the group members were improved, as well as gaining more experience of working in a team to solve a problem. A methodology for both approaching a problem, and for budgeting time, effort and resources was also developed as part of this project.
 
 \clearpage
 
@@ -359,7 +359,7 @@ The circuit used to process the sensor data and the layout used to place the sen
 \label{fig:outer_edge_sensor}
 \end{figure}
 
-Various layouts for the sensors were considered during the course of the project, these are outlined below. The first sensor layout to considered was the Outer Edge Sensor layout, shown in \Cref{fig:outer_edge_sensor}. This is a sensor arrangement with all the sensors at the extreme ends of the board. This allows us to capture a wider picture of where the robot is. This will be able to to detect intersections in advance of arriving at them. This layout also doesn't have the capability to closely track a line.
+Various layouts for the sensors were considered during the course of the project, these are outlined below. The first sensor layout to be considered was the Outer Edge Sensor layout, shown in \Cref{fig:outer_edge_sensor}. This is a sensor arrangement with all the sensors at the extreme ends of the board. This allows us to capture a wider picture of where the robot is. This will be able to to detect intersections in advance of arriving at them. This layout also doesn't have the capability to closely track a line.
 
 Another layout that was considered was the Circular Sensor Arrangement as in \Cref{fig:circular_sensor}. This layout would not be able to detect that the robot is deviating off the line, until the robot has fully left the line. This would make it harder to keep the oscillations shallow and follow the line reasonably straight. This layout would also introduce a delay while detecting intersections, as the side sensors are further back from the edge. This means there might not be enough notice to brake in time.
 
